# Website-Change-Catcher

./: .gitignore  .pylintrc  README.md  RELEASE_NOTES.md  env.example  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ruff.yml  watcher.yml
tests/: __init__.py  test_diff.py  test_models.py  test_parse.py
tests/fixtures/: .gitkeep
watcher/: __init__.py  __main__.py  cli.py  diff.py  fetch.py  models.py  notify.py  parse.py  store.py
