[project]
name = "website-change-catcher"
version = "0.1.0"
description = "A monitoring service that watches webpages for job listing changes"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.25.0",
    "selectolax>=0.3.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["watcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
